# TricycleRobot-Calibration

./: .gitignore  README.md  index.html  pyproject.toml
Data/: view_traj.py
Source/: config.yml  data_handler.py  least_squares.py  main.py  utils.py
TricycleRobotCalibration/: config.yml  main.py
TricycleRobotCalibration/Calibration/: Least_Squares.py  least_squares.py  main.py
TricycleRobotCalibration/Utils/: Utils.py  dataset.py  robot.py  utils.py
